--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,11 @@
+@use "/src/lib/scss/vars.scss" as *;
+
 :root {
     --color: #0f0f0f;
     --bg-color: #f6f6f6;
     --bg-color-alt: #ededed;
 
     font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 400;
 
     color: var(--color);
     background-color: var(--bg-color);
@@ -16,6 +15,42 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
+}
+
+* {
+    box-sizing: border-box;
+    min-width: 0;
+}
+
+button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0.25rem 0.5rem;
+    &:focus {
+        outline: none;
+    }
+}
+
+.tarkov-btn {
+    background-color: $tarkov-tan;
+    color: $tarkov-text;
+    border: none;
+    font-size: 1em;
+
+    &:active {
+        background-color: $tarkov-tan-lighter;
+        outline: $tarkov-text solid 1px;
+    }
+
+    &:hover {
+        background-color: $tarkov-tan-darker;
+    }
+}
+
+input[type="text"] {
+    padding: 0.5rem;
 }
 
 html,
