--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,4 +1,10 @@
 main {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    flex: 1 1 100%;
+
+    > ul {
+        display: flex;
+    }
 }
