--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,3 +1,4 @@
+@use "./lib/scss/vars.scss" as *;
 main {
     display: flex;
     flex-direction: column;
@@ -6,5 +7,32 @@ main {
 
     > ul {
         display: flex;
+        width: 100%;
+
+        li {
+            flex-grow: 1;
+            button {
+                border: none;
+                background-color: var(--bg-color);
+                width: 100%;
+                font-size: 1.5em;
+
+                &.active {
+                    background-color: $tarkov-tan;
+                    color: $tarkov-text;
+                    position: relative;
+                }
+
+                &:hover:not(.active) {
+                    background-color: $tarkov-tan-darker;
+                    color: $tarkov-text;
+                }
+            }
+        }
+    }
+
+    > section {
+        flex-grow: 1;
+        width: 100%;
     }
 }
