--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,6 +4,9 @@ main {
     flex-direction: column;
     width: 100%;
     flex: 1 1 100%;
+    height: 100%;
+    max-height: 100%;
+    overflow: hidden;
 
     > ul {
         display: flex;
@@ -31,8 +34,23 @@ main {
         }
     }
 
+    > ul:hover + section > ul:first-child,
+    > section > ul:first-child:hover {
+        max-height: 3rem;
+    }
+
     > section {
-        flex-grow: 1;
+        flex: 0 1 100%;
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        max-height: calc(100% - 2.25rem);
+
+        > ul:first-child {
+            max-height: 0;
+            flex: 1 0 2.25rem;
+            overflow: hidden;
+            transition: max-height 0.2s ease-in-out;
+        }
     }
 }
