--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,6 +33,41 @@
     }
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
+/* Default Button Styling */
+button,
+input[type="button"],
+input[type="submit"] {
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background-color: $tarkov-tan;
+    color: $tarkov-text;
+    padding: 0.25rem;
+    margin: 0;
+
+    &:hover {
+        background-color: $tarkov-tan-darker;
+        color: $tarkov-text;
+    }
+
+    &:active {
+        color: $tarkov-text;
+        background-color: $tarkov-tan-lighter;
+    }
+}
+
 .tooltip .tooltiptext {
     visibility: hidden;
     width: 120px;
@@ -143,8 +178,5 @@ ul {
     button {
         color: #ffffff;
         background-color: #0f0f0f98;
-    }
-    button:active {
-        background-color: #0f0f0f69;
     }
 }
