--- a/src/Items/Items.module.scss
+++ b/src/Items/Items.module.scss
@@ -29,7 +29,7 @@
     overflow-y: auto;
     max-height: 100%;
     display: grid;
-    grid-template-columns: auto 1fr auto 0.5rem auto;
+    grid-template-columns: auto 1fr auto auto auto 0.5rem auto;
 }
 
 .itemLine {
@@ -108,6 +108,60 @@
         box-shadow: none;
         padding: 0.75em;
     }
+
+    > label {
+        height: 100%;
+        width: auto;
+        margin: 0;
+        flex-grow: 1;
+        max-width: 2.25rem;
+        background-color: transparent;
+        position: relative;
+        cursor: pointer;
+
+        input {
+            position: absolute;
+            top: 0;
+            left: 0;
+            opacity: 0;
+            cursor: pointer;
+            height: 0;
+            width: 0;
+        }
+
+        span {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+        }
+
+        &:hover input ~ span {
+        }
+
+        input:checked ~ span {
+        }
+
+        span {
+            position: absolute;
+            display: flex;
+            opacity: 0.2;
+        }
+
+        input:checked ~ span {
+            opacity: 1;
+        }
+
+        span {
+            align-items: center;
+            justify-content: center;
+            svg {
+                height: 75%;
+                width: 75%;
+            }
+        }
+    }
 }
 
 .titleBar {
@@ -135,6 +189,18 @@
 
         &:last-child {
             grid-column: span 2;
+        }
+    }
+
+    > div {
+        display: flex;
+        height: 100%;
+
+        button {
+            flex: 1 1 50%;
+            svg {
+                flex-shrink: 0;
+            }
         }
     }
 }
