--- a/src/Tasks/Tasks.module.scss
+++ b/src/Tasks/Tasks.module.scss
@@ -276,7 +276,7 @@
     }
 }
 
-.mainDialog {
+.taskDialog {
     background-color: transparent;
     padding: 0;
     background-color: var(--bg-color-alt);
