--- a/src/nav/WipePanel.module.scss
+++ b/src/nav/WipePanel.module.scss
@@ -127,7 +127,12 @@ nav {
         padding: 0;
         background-color: var(--bg-color-alt);
         color: var(--color);
-        > form {
+
+        &::backdrop {
+            backdrop-filter: blur(5px);
+        }
+        > form,
+        > div {
             padding: 1rem;
             align-items: center;
             justify-content: center;
@@ -139,6 +144,12 @@ nav {
             button {
                 border: 1px solid $tarkov-text !important;
                 padding: 0.5rem 1rem;
+            }
+
+            select {
+                padding: 0.5rem;
+                background-color: var(--bg-color);
+                color: var(--color);
             }
         }
     }
